Use "coep: credentialless" with credentialless iframes on all pages on Chrome 110+

--- a/public/oops/scheduled-maintenance.html
+++ b/public/oops/scheduled-maintenance.html
@@ -104,6 +104,7 @@
             frameborder="0"
             width="400"
             height="500"
+            credentialless
           >
           </iframe>
         </div>
