--- a/public/sound/test.html
+++ b/public/sound/test.html
@@ -50,7 +50,7 @@
         lichess.sound.changeSet(set);
         lichess.sound.play(name);
       }
-      const soundSets = ['standard', 'piano', 'nes', 'sfx', 'futuristic', 'robot', 'lisp', 'woodland', 'drums'];
+      const soundSets = ['standard', 'piano', 'nes', 'sfx', 'futuristic', 'robot', 'lisp', 'woodland'];
       const basics = [
         'genericNotify',
         'move',
