push to talk and bugfixes

--- a/public/oops/diagnostics.html
+++ b/public/oops/diagnostics.html
@@ -145,11 +145,11 @@
         'client-eval-enabled',
         'ceval.disable',
         'ceval.enabled-after',
-        'analyse.ceval.multipv',
-        'analyse.ceval.threads',
-        'analyse.ceval.hash-size',
-        'analyse.ceval.infinite',
-        'analyse.ceval.enable-nnue',
+        'ceval.multipv',
+        'ceval.threads',
+        'ceval.hash-size',
+        'ceval.infinite',
+        'ceval.enable-nnue',
         'just-notified',
         'push-subscribed',
         'grid',
